<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCompanyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/company_name_enter" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputCompanyName"
        app:layout_constraintStart_toStartOf="@+id/textInputCompanyName"
        app:layout_constraintTop_toBottomOf="@+id/textInputCompanyName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country_name_enter"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputCountry"
        app:layout_constraintStart_toStartOf="@+id/textInputCountry"
        app:layout_constraintTop_toBottomOf="@+id/textInputCountry"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_number_enter"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/lLayoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputTotal"
        app:layout_constraintStart_toStartOf="@+id/textInputTotal"
        app:layout_constraintTop_toBottomOf="@+id/textInputTotal"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/save"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:theme="@style/MyButtonTheme" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:theme="@style/MyButtonTheme" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>