<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/blue_100"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputClientName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        android:hint="@string/client"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white" />

        <!--      <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/editTextClientName"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:imeOptions="actionNext"
                  android:hint="@string/company_name_enter" />-->
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputQuantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textInputClientName"
        app:layout_constraintStart_toStartOf="@+id/textInputClientName"
        app:layout_constraintTop_toBottomOf="@+id/textInputClientName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/white"
            android:hint="@string/quantity"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/total"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textInputQuantity"
        app:layout_constraintStart_toStartOf="@+id/textInputQuantity"
        app:layout_constraintTop_toBottomOf="@+id/textInputQuantity">

    </TextView>

    <LinearLayout
        android:id="@+id/lLayoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewTotal"
        app:layout_constraintStart_toStartOf="@+id/textViewTotal"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotal"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/save"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:theme="@style/MyButtonTheme" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/close"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:theme="@style/MyButtonTheme" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>