<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="24dp"
    android:layout_marginTop="10dp"
    android:background="@color/blue_100"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/textViewCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:text="@string/country"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewName"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:layout_constraintTop_toTopOf="@+id/textViewName"
        app:layout_constraintEnd_toStartOf="@+id/textViewTotal"/>

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/total"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewCountry"
        app:layout_constraintTop_toTopOf="@+id/textViewCountry" />

    <View
        android:id="@+id/viewDividerName"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCountry"
        app:layout_constraintEnd_toStartOf="@+id/textViewCountry"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewDividerCountry"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCountry"
        app:layout_constraintEnd_toStartOf="@+id/textViewTotal"
        app:layout_constraintStart_toEndOf="@+id/textViewCountry"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewBottom"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

</androidx.constraintlayout.widget.ConstraintLayout>